# recommendation_service

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: cfbd8bdf160e_create_job_postings_and_user_profiles_.py
app/: main.py
app/api_utils/: recommendation_logic.py
app/data_model/: job_posting_model.py  user_profile_model.py
app/db_model/: orm_model.py
