[tool.poetry]
name = "recommendation-service"
version = "1.0"
description = ""
authors = ["ambika-149 <ambikatpp@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
